Adding content to HTML

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>TAGGART BONHAM, CS52</title>
 </head>
 <body>
-  <p>Welcome</p>
+  <p>Welcome to my page. It's a real good time here. </p>
 
 </body>
 </html>
