--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TAGGART BONHAM, CS52</title>
+  <title>JTB</title>
 </head>
 <body>
+  <p> Taggart Bonham, CS52</p>
   <p>Welcome to my page. It's a real good time here. </p>
 
 </body>
